More changes for usability.

--- a/src/MfGames.Commands/MfGames.Commands.csproj
+++ b/src/MfGames.Commands/MfGames.Commands.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeCommand.cs" />
+    <Compile Include="DoTypes.cs" />
     <Compile Include="ICommandController.cs" />
     <Compile Include="IUndoableCommand.cs" />
     <Compile Include="UndoRedoCommandController.cs" />
