Massive formatting and restructuring of the system.

--- a/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
+++ b/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
@@ -85,7 +85,9 @@
     <Compile Include="IInsertTextFromTextRangeCommand.cs" />
     <Compile Include="ITextEditingCommand.cs" />
     <Compile Include="ITextEditingCommandController.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="CharacterPosition.cs" />
+    <Compile Include="LinePosition.cs" />
+    <Compile Include="WordSearchDirection.cs" />
     <Compile Include="SingleLineTextRange.cs" />
     <Compile Include="TextPosition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
