--- a/src/MfGames.Commands.TextEditings.Tests/MfGames.Commands.TextEditings.Tests.csproj
+++ b/src/MfGames.Commands.TextEditings.Tests/MfGames.Commands.TextEditings.Tests.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>MfGames.Commands.TextEditings.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,16 +52,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MfGames.Commands.TextEditing\MfGames.Commands.TextEditing.csproj">
-      <Project>{e3991d2e-b9d7-4c7d-9ff6-5420006c23dd}</Project>
-      <Name>MfGames.Commands.TextEditing</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MfGames.Commands\MfGames.Commands.csproj">
       <Project>{9e517018-c1d3-46ad-aa1d-e6fb45165a3f}</Project>
       <Name>MfGames.Commands</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
