--- a/src/MfGames.Commands/MfGames.Commands.csproj
+++ b/src/MfGames.Commands/MfGames.Commands.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>MfGames.Commands</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -82,6 +84,23 @@
     <Compile Include="ICommandController.cs" />
     <Compile Include="IMergableCommand.cs" />
     <Compile Include="IUndoableCommand.cs" />
+    <Compile Include="TextEditing\CharacterPosition.cs" />
+    <Compile Include="TextEditing\Composites\JoinNextParagraphCommand.cs" />
+    <Compile Include="TextEditing\Composites\JoinPreviousParagraphCommand.cs" />
+    <Compile Include="TextEditing\Composites\PasteCommand.cs" />
+    <Compile Include="TextEditing\Composites\SplitParagraphCommand.cs" />
+    <Compile Include="TextEditing\IDeleteLineCommand.cs" />
+    <Compile Include="TextEditing\IDeleteTextCommand.cs" />
+    <Compile Include="TextEditing\IInsertLineCommand.cs" />
+    <Compile Include="TextEditing\IInsertTextCommand.cs" />
+    <Compile Include="TextEditing\IInsertTextFromTextRangeCommand.cs" />
+    <Compile Include="TextEditing\ITextEditingCommand.cs" />
+    <Compile Include="TextEditing\ITextEditingCommandController.cs" />
+    <Compile Include="TextEditing\LinePosition.cs" />
+    <Compile Include="TextEditing\SingleLineTextRange.cs" />
+    <Compile Include="TextEditing\TextPosition.cs" />
+    <Compile Include="TextEditing\TextRange.cs" />
+    <Compile Include="TextEditing\WordSearchDirection.cs" />
     <Compile Include="UndoRedoCommandController.cs" />
     <Compile Include="CommandFactoryReference.cs" />
     <Compile Include="CommandFactoryManager.cs" />
@@ -90,9 +109,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="MfGames.Commands.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
