--- a/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
+++ b/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
@@ -4,41 +4,37 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7519FC3F-6BF9-424D-8B7D-7139D53D0597}</ProjectGuid>
+    <ProjectGuid>{86819A8B-57D0-42FC-9232-382BE6877FB5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MfGames.Commands.Tests</RootNamespace>
-    <AssemblyName>MfGames.Commands.Tests</AssemblyName>
+    <RootNamespace>MfGames.Commands.TextEditing</RootNamespace>
+    <AssemblyName>MfGames.Commands.TextEditing</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+	<BuildPackage>true</BuildPackage>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>$(SolutionDir)\..\bin\$(Configuration)\</OutputPath>
+    <OutputPath>..\..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)\..\bin\$(Configuration)\</OutputPath>
+    <OutputPath>..\..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MfGames.Languages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="MfGames.Languages">
       <HintPath>..\packages\MfGames.Languages.1.0.0.0\lib\net45\MfGames.Languages.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,23 +45,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharacterPositionTests.cs" />
-    <Compile Include="LinePositionTests.cs" />
-    <Compile Include="OffsetWordTokenizer.cs" />
+    <Compile Include="CharacterPosition.cs" />
+    <Compile Include="Composites\JoinNextParagraphCommand.cs" />
+    <Compile Include="Composites\JoinPreviousParagraphCommand.cs" />
+    <Compile Include="Composites\PasteCommand.cs" />
+    <Compile Include="Composites\SplitParagraphCommand.cs" />
+    <Compile Include="IDeleteLineCommand.cs" />
+    <Compile Include="IDeleteTextCommand.cs" />
+    <Compile Include="IInsertLineCommand.cs" />
+    <Compile Include="IInsertTextCommand.cs" />
+    <Compile Include="IInsertTextFromTextRangeCommand.cs" />
+    <Compile Include="ITextEditingCommand.cs" />
+    <Compile Include="ITextEditingCommandController.cs" />
+    <Compile Include="LinePosition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SingleLineTextRange.cs" />
+    <Compile Include="TextPosition.cs" />
+    <Compile Include="TextRange.cs" />
+    <Compile Include="WordSearchDirection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MfGames.Commands.TextEditing\MfGames.Commands.TextEditing.csproj">
-      <Project>{86819A8B-57D0-42FC-9232-382BE6877FB5}</Project>
-      <Name>MfGames.Commands.TextEditing</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MfGames.Commands\MfGames.Commands.csproj">
       <Project>{9e517018-c1d3-46ad-aa1d-e6fb45165a3f}</Project>
       <Name>MfGames.Commands</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
