--- a/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.nuspec
+++ b/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.nuspec
@@ -6,12 +6,15 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <licenseUrl>http://mfgames.com/mfgames-commands-cil/license</licenseUrl>
+    <projectUrl>http://mfgames.com/mfgames-commands-cil</projectUrl>
+    <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright 2013</copyright>
-    <tags>Tag1 Tag2</tags>
+    <tags>Commands</tags>
+	<dependencies>
+      <dependency id="MfGames.Commands" version="0.1.0.0" />
+    </dependencies>
   </metadata>
 </package>
