Added the ability to pass options into the LinePosition.GetLineIndex methods. This will allow for turning off the out of bounds checking exceptions.

--- a/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
+++ b/src/MfGames.Commands.TextEditing/MfGames.Commands.TextEditing.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ITextEditingCommand.cs" />
     <Compile Include="ITextEditingCommandController.cs" />
     <Compile Include="LinePosition.cs" />
+    <Compile Include="LinePositionOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleLineTextRange.cs" />
     <Compile Include="TextPosition.cs" />
